Added modals for hotels new and edit forms

--- a/app/views/hotel_branches/_form.html.erb
+++ b/app/views/hotel_branches/_form.html.erb
@@ -51,6 +51,9 @@
               <%= f.submit 'Update Hotel', class: 'btn btn-primary' %>
             </div>
           <% end %>
+          <div class="card-footer text-muted">
+            <%= link_to 'Back', hotel_branches_path, class: 'btn btn-secondary' %>
+          </div>
         </div>
       </div>
     </div>
