--- a/app/views/hotel_branches/edit.js.erb
+++ b/app/views/hotel_branches/edit.js.erb
@@ -1,6 +1,6 @@
 $(document).ready(function() {
   $('#editModal').modal('show');
-  $('#form-container').html('<%= escape_javascript(render 'hotel_branches/form') %>');
+  $('#form-container').html('<%= escape_javascript(render 'hotel_branches/edit_modal') %>');
 });
 
 
