--- a/app/views/hotel_branches/new.js.erb
+++ b/app/views/hotel_branches/new.js.erb
@@ -1,6 +1,6 @@
 $(document).ready(function() {
-  $('#editModal').modal('show');
-  $('#form-container').html('<%= j render 'hotel_branches/newform' %>');
+  $('#newModal').modal('show');
+  $('#form-container').html('<%= j render 'hotel_branches/new_modal' %>');
 });
 
 
