--- a/app/views/hotel_branches/index.html.erb
+++ b/app/views/hotel_branches/index.html.erb
@@ -25,7 +25,7 @@
           <td><%= hotel.phone %></td>
           <td><%= hotel.website %></td>
           <td><%= link_to 'Show', hotel_branch_path(hotel), class: 'btn btn-primary' %></td>
-          <td><%= link_to 'Edit', edit_hotel_branch_path(hotel), data: { remote: true }, class: 'btn btn-secondary' %></td>
+          <td><%= link_to 'Edit', edit_hotel_branch_path(hotel), {data: { remote: true }, class: 'btn btn-secondary',"data-toggle": "modal", "data-target": "#editModal"} %></td>
           <td><%= button_to 'Delete', hotel_branch_path(hotel), class: 'btn btn-danger', remote: true , method: :delete, data: { confirm: 'Are you sure?' }%></td>
         </tr>
         <% end %>
@@ -33,7 +33,7 @@
 </table>
 
 <p>
-  <%= link_to 'Add New Hotel' , new_hotel_branch_path , data: {remote: true}, class: 'btn btn-primary' %>
+  <%= link_to 'Add New Hotel' , new_hotel_branch_path , {data: {remote: true}, class: 'btn btn-primary',"data-toggle": "modal", "data-target": "#newModal"} %>
 </p>
 
 <p>
