Added modal for new and edit of clients

--- a/app/views/clients/_newform.html.erb
+++ b/app/views/clients/_newform.html.erb
@@ -23,6 +23,9 @@
               <%= f.submit 'Add Client', class: 'btn btn-primary' %>
             </div>
           <% end %>
+          <div class="card-footer text-muted">
+            <%= link_to 'Back', clients_path , class: 'btn btn-secondary mt-2' %>
+          </div>
         </div>
       </div>
     </div>
