--- a/app/views/clients/edit.js.erb
+++ b/app/views/clients/edit.js.erb
@@ -1,5 +1,5 @@
 $(document).ready(function() {
   $('#editModal').modal('show');
-  $('#form-container').html('<%= escape_javascript(render 'clients/form') %>');
+  $('#form-container').html('<%= escape_javascript(render 'clients/edit_modal') %>');
 });
 
