--- a/app/views/clients/new.js.erb
+++ b/app/views/clients/new.js.erb
@@ -1,4 +1,4 @@
 
   $('#newModal').modal('show');
-  $('#form-container').html('<%= j render 'clients/newform' %>');
+  $('#form-container').html('<%= j render 'clients/new_modal' %>');
 
