Added modals for new and edit forms for room facilities and roomfacilitycategories

--- a/app/views/room_facilities/edit.js.erb
+++ b/app/views/room_facilities/edit.js.erb
@@ -1,4 +1,4 @@
 $(document).ready(function() {
   $('#editModal').modal('show');
-  $('#form-container').html('<%= escape_javascript(render 'room_facilities/form') %>');
+  $('#form-container').html('<%= escape_javascript(render 'room_facilities/edit_modal') %>');
 });
