--- a/app/views/room_facilities/index.html.erb
+++ b/app/views/room_facilities/index.html.erb
@@ -15,7 +15,7 @@
         <td><%= room_facility.name %></td>
         <td><%= room_facility.room_facility_category.name %></td>
         <td><%= link_to 'Show', room_facility, class: 'btn btn-primary' %></td>
-        <td><%= link_to 'Edit', edit_room_facility_path(room_facility), data: { remote: true }, class: 'btn btn-secondary' %></td>
+        <td><%= link_to 'Edit', edit_room_facility_path(room_facility), {data: { remote: true }, class: 'btn btn-secondary',"data-toggle": "modal", "data-target": "#editModal"} %></td>
         <td><%= link_to 'Destroy', room_facility,class: 'btn btn-danger',remote: true, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
@@ -24,7 +24,7 @@
 
 <br>
 
-<%= link_to 'New Room Facility', new_room_facility_path, data: {remote: true},class: 'btn btn-primary'%>
+<%= link_to 'New Room Facility', new_room_facility_path, {data: {remote: true},class: 'btn btn-primary',"data-toggle": "modal", "data-target": "#newModal"}%>
 <br/>
 <br/>
 <%= link_to 'View Categories', room_facility_categories_path, class: 'btn btn-secondary' %>
