--- a/app/views/room_facilities/new.js.erb
+++ b/app/views/room_facilities/new.js.erb
@@ -1,4 +1,4 @@
 $(document).ready(function() {
   $('#newModal').modal('show');
-  $('#form-container').html('<%= escape_javascript(render 'room_facilities/newform') %>');
+  $('#form-container').html('<%= escape_javascript(render 'room_facilities/new_modal') %>');
 });
