--- a/app/views/room_facility_categories/index.html.erb
+++ b/app/views/room_facility_categories/index.html.erb
@@ -13,7 +13,7 @@
       <tr id = "room_facility_category-<%= room_facility_category.id %>">
         <td><%= room_facility_category.name %></td>
         <td><%= link_to 'Show', room_facility_category, class: 'btn btn-primary'%></td>
-        <td><%= link_to 'Edit', edit_room_facility_category_path(room_facility_category), data: {remote: true},class: 'btn btn-secondary' %></td>
+        <td><%= link_to 'Edit', edit_room_facility_category_path(room_facility_category), {data: {remote: true},class: 'btn btn-secondary',"data-toggle": "modal", "data-target": "#editModal"} %></td>
         <td><%= link_to 'Destroy', room_facility_category,class: 'btn btn-danger',method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
@@ -22,6 +22,6 @@
 
 <br>
 
-<%= link_to 'New Room Facility Category', new_room_facility_category_path, data: {remote: true}, class: 'btn btn-primary' %>
+<%= link_to 'New Room Facility Category', new_room_facility_category_path, {data: {remote: true}, class: 'btn btn-primary',"data-toggle": "modal", "data-target": "#newModal"} %>
 
 <div id="form-container">
