--- a/app/views/hotel_branches/update.js.erb
+++ b/app/views/hotel_branches/update.js.erb
@@ -1,2 +1,2 @@
-$("#form-container").toggle();
-$('#hotel-<%= @hotel.id%>').html('<%=j render 'hotel', locals: {hotel: @hotel} %>');
+ $("#edithotel_<%=@hotel.id%>").hide();
+
