--- a/app/views/hotel_branches/create.js.erb
+++ b/app/views/hotel_branches/create.js.erb
@@ -1,4 +1,4 @@
-$("#form-container").toggle();
-$("#hotel-table").append("<%= j(render 'hotel_branches/hotel', hotel: @hotel) %>");
-
+<!--$("#closeNewForm").click(); -->
+$("#hotel-table").append("<%= j(render 'hotel', hotel: @hotel) %>");
+$("#closeNewForm").click()
 
