--- a/app/views/hotel_branches/index.html.erb
+++ b/app/views/hotel_branches/index.html.erb
@@ -11,34 +11,39 @@
       <th> Phone </th>
       <th> Website </th>
     </tr>
-    <tr>
   </thead>
-    <tbody id="hotel-table">
-      <% @hotel.each do |hotel| %>
-        <tr id="hotel-<%= hotel.id %>">
-          <td><%= hotel.name %></td>
-          <td><%= hotel.address %></td>
-          <td><%= hotel.city %></td>
-          <td><%= hotel.state %></td>
-          <td><%= hotel.location.country if hotel.location%></td>
-          <td><%= hotel.client.name if hotel.client %></td>
-          <td><%= hotel.phone %></td>
-          <td><%= hotel.website %></td>
-          <td><%= link_to 'Show', hotel_branch_path(hotel), class: 'btn btn-primary' %></td>
-          <td><%= link_to 'Edit', edit_hotel_branch_path(hotel), {data: { remote: true }, class: 'btn btn-secondary',"data-toggle": "modal", "data-target": "#editModal"} %></td>
-          <td><%= button_to 'Delete', hotel_branch_path(hotel), class: 'btn btn-danger', remote: true , method: :delete, data: { confirm: 'Are you sure?' }%></td>
-        </tr>
-        <% end %>
-    </tbody>
+  <tbody id="hotel-table">
+      <% @hotels.each do |hotel| %>
+        <%= render 'hotel', hotel: hotel %>
+      <% end %>
+  <tbody>
 </table>
 
-<p>
-  <%= link_to 'Add New Hotel' , new_hotel_branch_path , {data: {remote: true}, class: 'btn btn-primary',"data-toggle": "modal", "data-target": "#newModal"} %>
-</p>
+<!-- Button trigger modal -->
+<button type="button", class="btn btn-primary", data-bs-toggle="modal", data-bs-target="#newModal">
+  Add New Hotel
+</button>
+<!-- Modal -->
+<div class="modal fade" id="newModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Add new Hotel</h5>
+        <button type="button" id= "closeNewForm" class="close" data-bs-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div id="errors"></div>
+        <%= render 'newform'%>
+      </div>
+    </div>
+  </div>
+</div> 
+
 
 <p>
-  <%= link_to 'Home' , root_path, class: 'btn btn-secondary' %>
+  <%= link_to 'Home' , root_path, class: 'btn btn-secondary mt-2' %>
 </p>
-
+<div class="modal-body" id="editmodal">
 <div id="form-container"></div>
-
