--- a/app/views/hotel_branches/new.html.erb
+++ b/app/views/hotel_branches/new.html.erb
@@ -1,20 +1,11 @@
-<div class="container">
+<<div class="container">
   <div class="row justify-content-center mt-4 ">
     <div class="col-md-8">
       <div class="card">
         <div class="card-header">Add a New Hotel</div>
         <div class="card-body">
-          <% if @hotel.errors.any? %>
-            <div id="error_explanation">
-              <h2><%= pluralize(@hotel.errors.count, "error") %> prohibited this location from being saved:</h2>
-              <ul>
-                <% @hotel.errors.full_messages.each do |message| %>
-                  <li><%= message %></li>
-                <% end %>
-              </ul>
-            </div>
-          <% end %>
-          <%= form_with scope: :hotel_branch  , url: hotel_branches_path, local: true do |f| %>
+          <%= render 'errors' %>
+          <%= form_with(model: @hotel, local: true, method: :post) do |f| %>
             <div class="form-group">
               <%= f.label :Name %>
               <%= f.text_field :name, class: 'form-control' %>
@@ -56,3 +47,4 @@
     </div>
   </div>
 </div>
+>
