--- a/app/views/locations/_location.html.erb
+++ b/app/views/locations/_location.html.erb
@@ -1,5 +1,7 @@
-        <td><%= @location.country %></td>
-        <td><%= @location.region.name %></td>
-        <td><%= link_to 'Show', location_path(@location), class: 'btn btn-primary hover-style' %></td>
-        <td><%= link_to 'Edit', edit_location_path(@location), data: { remote: true }, class: 'btn btn-secondary hover-style' %></td>
-        <td><%= button_to 'Delete', location_path(@location), class: 'btn btn-danger', remote: true , method: :delete, data: { confirm: 'Are you sure?' }%></td> %>
+      <tr id="location_<%= location.id %>">
+        <td><%= location.country %></td>
+        <td><%= location.region.name %></td>
+        <td><%= link_to 'Show', location_path(location), class: 'btn btn-primary' %></td>
+        <td><%= link_to 'Edit', edit_location_path(location), {data: { remote: true }, class: 'btn btn-secondary',"data-toggle": "modal", "data-target": "editModal"} %></td>
+        <td><%= button_to 'Delete', location_path(location), class: 'btn btn-danger', remote: true , method: :delete, data: { confirm: 'Are you sure?' }%></td>
+      </tr>
