--- a/app/views/locations/_location.html.erb
+++ b/app/views/locations/_location.html.erb
@@ -2,6 +2,39 @@
         <td><%= location.country %></td>
         <td><%= location.region.name %></td>
         <td><%= link_to 'Show', location_path(location), class: 'btn btn-primary' %></td>
-        <td><%= link_to 'Edit', edit_location_path(location), {data: { remote: true }, class: 'btn btn-secondary',"data-toggle": "modal", "data-target": "editModal"} %></td>
+        <td><%= link_to 'Edit', edit_location_path(location), data: {remote: true, bs_toggle: "modal", bs_target: "#editlocation_#{location.id}"}, class: 'btn btn-primary' %></td>
         <td><%= button_to 'Delete', location_path(location), class: 'btn btn-danger', remote: true , method: :delete, data: { confirm: 'Are you sure?' }%></td>
       </tr>
+
+  <!-- Edit Modal -->
+  <div class="modal fade" id="editlocation_<%= location.id %>" tabindex="-1" role="dialog" aria-labelledby="editModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="editModalLabel">Edit Location</h5>
+        <button type="button" class="closeEditForm" data-bs-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div id="editerrors"></div>
+        <%= form_with(model: location, data: { remote: true}, method: :patch, id: 'editModal' ) do |f| %>
+            <div class="form-group">
+              <%= f.label :Country%>
+              <%= f.text_field :country, class: 'form-control' %>
+            </div>
+            <div class="form-group">
+              <%= f.label :Region %><br/>
+              <%= f.select :region_id, Region.all.collect {|x| [x.name, x.id]}, {} %>
+            </div>
+            <div class="form-group">
+              <%= f.submit 'Update Location', class: 'btn btn-primary mt-2' %>
+            </div>
+          <% end %>
+          <div class="card-footer text-muted">
+            <%= link_to 'Back', locations_path, class: 'btn btn-secondary' %>
+          </div>
+      </div>
+    </div>
+  </div>
+</div> 
