--- a/app/views/room_facilities/_room_facility.html.erb
+++ b/app/views/room_facilities/_room_facility.html.erb
@@ -1,5 +1,43 @@
-<td><%= @room_facility.name%></td>
-<td><%= @room_facility.room_facility_category.name %></td>
-<td><%= link_to 'Show', @room_facility, class: 'btn btn-primary hover-style' %></td>
-<td><%= link_to 'Edit', edit_room_facility_path(@room_facility), data: { remote: true }, class: 'btn btn-secondary hover-style' %></td>
-<td><%= link_to 'Destroy', @room_facility,class: 'btn btn-danger hover-style',remote: true, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+<tr id="room_facility-<%=room_facility.id%>">
+  <td><%= room_facility.name%></td>
+  <td><%= room_facility.room_facility_category.name %></td>
+  <td><%= link_to 'Show', room_facility, class: 'btn btn-primary' %></td>
+  <td><%= link_to 'Edit', edit_room_facility_path(room_facility), data: { remote: true, "bs_toggle": "modal", "bs_target": "#editroom_facility-#{room_facility.id}"}, class: 'btn btn-primary' %></td>
+  <td><%= link_to 'Destroy', room_facility,class: 'btn btn-danger',remote: true, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+</tr>
+
+<div class="modal fade" id="editroom_facility-<%= room_facility.id %>" tabindex="-1" role="dialog" aria-labelledby="editModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="editModalLabel">Edit Region</h5>
+        <button type="button" class="closeEditForm" data-bs-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div id="editerrors"></div>
+        <%= form_with(model: room_facility, data: { remote: true}, method: :patch, id: 'edit-form') do |f| %>
+          <div class="form-group">
+            <%= f.label :Name%>
+            <%= f.text_field :name, class: 'form-control' %>
+          </div>
+          <div class="form-group">
+            <%= f.label :Category %><br/>
+            <%= f.select :room_facility_category_id, RoomFacilityCategory.all.collect {|x| [x.name, x.id]}, {} %>
+          </div>
+          <div class="form-group">
+            <%= f.label :Room %><br/>
+            <%= f.select :room_id, Room.all.collect {|x| [x.name, x.id]}, {} %>
+          </div>
+          <div class="form-group">
+            <%= f.submit 'Add Room Facility', class: 'btn btn-primary mt-2' %>
+          </div>
+        <% end %>
+        <div class="card-footer text-muted">
+          <%= link_to 'Back', room_facilities_path, class: 'btn btn-secondary' %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
