--- a/app/views/room_facilities/edit.js.erb
+++ b/app/views/room_facilities/edit.js.erb
@@ -1,4 +1,1 @@
-$(document).ready(function() {
-  $('#editModal').modal('show');
-  $('#form-container').html('<%= escape_javascript(render 'room_facilities/edit_modal') %>');
-});
+$('#editroom_facility-<%=@room_facility.id%>').show()
