--- a/app/views/room_facility_categories/edit.js.erb
+++ b/app/views/room_facility_categories/edit.js.erb
@@ -1,4 +1,1 @@
-$(document).ready(function() {
-  $('#editModal').modal('show');
-  $('#form-container').html('<%= escape_javascript(render 'room_facility_categories/edit_modal') %>');
-});
+$('#editroom_facility_category-<%=@room_facility_category.id%>').show()
