--- a/app/views/room_facility_categories/index.html.erb
+++ b/app/views/room_facility_categories/index.html.erb
@@ -10,18 +10,33 @@
 
   <tbody id= "roomfacilitycategory-table">
     <% @room_facility_categories.each do |room_facility_category| %>
-      <tr id = "room_facility_category-<%= room_facility_category.id %>">
-        <td><%= room_facility_category.name %></td>
-        <td><%= link_to 'Show', room_facility_category, class: 'btn btn-primary'%></td>
-        <td><%= link_to 'Edit', edit_room_facility_category_path(room_facility_category), {data: {remote: true},class: 'btn btn-secondary',"data-toggle": "modal", "data-target": "#editModal"} %></td>
-        <td><%= link_to 'Destroy', room_facility_category,class: 'btn btn-danger',method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      <%= render 'room_facility_category', room_facility_category: room_facility_category %>
     <% end %>
   </tbody>
 </table>
 
 <br>
 
-<%= link_to 'New Room Facility Category', new_room_facility_category_path, {data: {remote: true}, class: 'btn btn-primary',"data-toggle": "modal", "data-target": "#newModal"} %>
+<!-- Button trigger modal -->
+<button type="button", class="btn btn-primary", data-bs-toggle="modal", data-bs-target="#newModal">
+  Add New Category
+</button>
+<!-- Modal -->
+<div class="modal fade" id="newModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Add new Room Facility Category</h5>
+        <button type="button" id= "closeNewForm" class="close" data-bs-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div id="errors"></div>
+        <%= render 'newform'%>
+      </div>
+    </div>
+  </div>
+</div> 
 
 <div id="form-container">
