Add and edit bootstrap modals from index is completed for rooms

--- a/app/views/rooms/create.js.erb
+++ b/app/views/rooms/create.js.erb
@@ -1,2 +1,2 @@
-$("#form-container").toggle();
-$("#room-table").append("<%= j(render 'rooms/room', room: @room) %>");
+$("#room-table").append("<%= j(render 'room', room: @room) %>");
+$("#closeNewForm").click()
