--- a/app/views/rooms/_room.html.erb
+++ b/app/views/rooms/_room.html.erb
@@ -1,7 +1,49 @@
-        <td><%= @room.name %></td>
-        <td><%= @room.capacity %></td>
-        <td><%= @room.price %></td>
-        <td><%= @room.hotel_branch.name %></td>
-        <td><%= link_to 'Show', room_path(@room) , class: 'btn btn-primary hover-style' %></td>
-        <td><%= link_to 'Edit', edit_room_path(@room), data: { remote: true }, class: 'btn btn-secondary hover-style' %></td>
-        <td><%= button_to 'Delete', room_path(@room), class: 'btn btn-danger hover-style', remote: true , method: :delete, data: { confirm: 'Are you sure?' }%></td>
+        <tr id="room-<%=room.id%>">
+                <td><%= room.name %></td>
+                <td><%= room.capacity %></td>
+                <td><%= room.price %></td>
+                <td><%= room.hotel_branch.name %></td>
+                <td><%= link_to 'Show', room_path(room) , class: 'btn btn-primary' %></td>
+                <td><%= link_to 'Edit', edit_room_path(room), data: { remote: true , bs_toggle: "modal", bs_target: "#editroom-#{room.id}"}, class: 'btn btn-secondary' %></td>
+                <td><%= button_to 'Delete', room_path(room), class: 'btn btn-danger', remote: true , method: :delete, data: { confirm: 'Are you sure?' }%></td>
+        </tr>
+
+        <div class="modal fade" id="editroom-<%= room.id %>" tabindex="-1" role="dialog" aria-labelledby="editModalLabel">
+                <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                                <div class="modal-header">
+                                        <h5 class="modal-title" id="editModalLabel">Edit Room</h5>
+                                        <button type="button" class="closeEditForm" data-bs-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                        </button>
+                                 </div>
+                                <div class="modal-body">
+                                        <div id="editerrors"></div>
+                                        <%= form_with(model: room, data: { remote: true}, method: :patch, id: 'edit-form' ) do |f| %>
+                                                <div class="form-group">
+                                                <%= f.label :Name %>
+                                                <%= f.text_field :name, class: 'form-control' %>
+                                                </div>
+                                                <div class="form-group">
+                                                <%= f.label :Hotel %><br/>
+                                                <%= f.select :hotel_branch_id, HotelBranch.all.collect {|x| [x.name, x.id]}, {} %>
+                                                </div>
+                                                <div class="form-group">
+                                                <%= f.label :Capacity %>
+                                                <%= f.text_field :capacity, class: 'form-control' %>
+                                                </div>
+                                                <div class="form-group">
+                                                <%= f.label :Price %>
+                                                <%= f.text_field :price, class: 'form-control' %>
+                                                </div>
+                                                <div class="form-group">
+                                                <%= f.submit 'Update Room', class: 'btn btn-primary mt-2' %>
+                                                </div>
+                                        <% end %>
+                                                <div class="card-footer text-muted">
+                                                        <%= link_to 'Back', rooms_path, class: 'btn btn-secondary' %>
+                                                </div>
+                                </div>
+                         </div>
+                </div>
+        </div>
