--- a/app/views/room_facilities/index.html.erb
+++ b/app/views/room_facilities/index.html.erb
@@ -19,7 +19,7 @@
 <br>
 <!-- Button trigger modal -->
 <button type="button", class="btn btn-primary", data-bs-toggle="modal", data-bs-target="#newModal">
-  Add New Region
+  Add New Facility
 </button>
 <!-- Modal -->
 <div class="modal fade" id="newModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
@@ -39,6 +39,6 @@
   </div>
 </div> 
 <br/>
-<%= link_to 'View Categories', room_facility_categories_path, class: 'btn btn-secondary' %>
+<%= link_to 'View Categories', room_facility_categories_path, class: 'btn btn-secondary mt-2' %>
 
 <div id="form-container"></div>
