Add and edit for clients

--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -4,21 +4,15 @@
       <div class="card">
         <div class="card-header">Edit Client Details</div>
         <div class="card-body">
-          <% if @client.errors.any? %>
-              <div id="error_explanation">
-                <h2><%= pluralize(@client.errors.count, "error") %> prohibited this location from being saved:</h2>
-                <ul>
-                  <% @client.errors.full_messages.each do |message| %>
-                    <li><%= message %></li>
-                  <% end %>
-                </ul>
-              </div>
-            <% end %>
+          
           <%= form_with(model: @client, data: { remote: true}, method: :patch, id: 'edit-form') do |f| %>
             <div class="form-group ">
               <%= f.label :Name %>
               <%= f.text_field :name, class: 'form-control mt-2' %>
             </div>
+
+            <%= f.hidden_field :user_id, value: current_user.id %>
+
             <div class="form-group">
               <%= f.submit 'Add Client', class: 'btn btn-primary mt-2' %>
             </div>
