--- a/app/views/clients/_client.html.erb
+++ b/app/views/clients/_client.html.erb
@@ -1,4 +1,35 @@
-        <td><%= @client.name %></td>
-        <td><%= link_to 'Show', client_path(@client), class: 'btn btn-secondary hover-style' %></td>
-        <td><%= link_to 'Edit', edit_client_path(@client),data: { remote: true }, class: 'btn btn-primary hover-style' %></td>
-        <td><%= link_to 'Destroy', client_path(@client), method: :delete, data: { confirm: 'Are you sure?' } , class: 'btn btn-danger hover-style'%></td>
+      <tr id = "client-<%= client.id %>">
+        <td><%= client.name %></td>
+        <td><%= link_to 'Show', client_path(client), class: 'btn btn-secondary' %></td>
+        <td><%= link_to 'Edit', edit_client_path(client),data: { remote: true , bs_toggle: "modal", bs_target: "#editclient-#{client.id}"}, class: 'btn btn-primary' %></td>
+        <td><%= link_to 'Destroy', client_path(client), method: :delete, data: { confirm: 'Are you sure?' } , class: 'btn btn-danger'%></td>
+      </tr>
+
+      <!-- Edit Modal -->
+  <div class="modal fade" id="editclient-<%= client.id %>" tabindex="-1" role="dialog" aria-labelledby="editModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="editModalLabel">Edit Client</h5>
+        <button type="button" class="closeEditForm" data-bs-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div id="editerrors"></div>
+          <%= form_with(model: client, data: { remote: true}, method: :patch, id: 'edit-form') do |f| %>
+            <div class="form-group ">
+              <%= f.label :Name %>
+              <%= f.text_field :name, class: 'form-control mt-2' %>
+            </div>
+            <div class="form-group">
+              <%= f.submit 'Update Client', class: 'btn btn-primary mt-2' %>
+            </div>
+          <% end %>
+            <div class="card-footer text-muted">
+              <%= link_to 'Back', clients_path , class: 'btn btn-secondary mt-2' %>
+            </div>
+      </div>
+    </div>
+  </div>
+</div> 
