--- a/app/views/clients/_newform.html.erb
+++ b/app/views/clients/_newform.html.erb
@@ -4,21 +4,12 @@
       <div class="card">
         <div class="card-header">Add a New Client</div>
         <div class="card-body">
-          <% if @client.errors.any? %>
-            <div id="error_explanation">
-              <h2><%= pluralize(@client.errors.count, "error") %> prohibited this location from being saved:</h2>
-              <ul>
-                <% @client.errors.full_messages.each do |message| %>
-                  <li><%= message %></li>
-                <% end %>
-              </ul>
-            </div>
-          <% end %>
-          <%= form_with scope: :client , url: clients_path, data: {remote: true} do |f| %>
+          <%= form_with model: @client, url: clients_path, data: {remote: true}, method: :post do |f| %>
             <div class="form-group">
               <%= f.label :Name %>
               <%= f.text_field :name, class: 'form-control' %>
             </div>
+            <%= f.hidden_field :user_id, value: current_user.id %>
             <div class="form-group">
               <%= f.submit 'Add Client', class: 'btn btn-primary' %>
             </div>
