--- a/app/views/room_facilities/_room_facility.html.erb
+++ b/app/views/room_facilities/_room_facility.html.erb
@@ -31,7 +31,7 @@
             <%= f.select :room_id, Room.all.collect {|x| [x.name, x.id]}, {} %>
           </div>
           <div class="form-group">
-            <%= f.submit 'Add Room Facility', class: 'btn btn-primary mt-2' %>
+            <%= f.submit 'Update Room Facility', class: 'btn btn-primary mt-2' %>
           </div>
         <% end %>
         <div class="card-footer text-muted">
