Added Nested In a client show page and completed till adding hotels and rooms

--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -1,17 +1,12 @@
-<div class="container mt-5">
-  <div class="card">
-    <div class="card-header">
-      <h1 class="card-title"><%= @client.name %></h1>
-    </div>
-       <h2 class="card-subtitle mb-2 text-muted">List of Hotels of <%= @client.name %></h2>
-        <ul>
-        <% @client.hotel_branches.each do |hotel| %>
-          <%= hotel.name %><br/>
-        <% end %>
-        </ul>
-    </div>
-    <div class="card-footer text-muted">
-      <%= link_to 'Back', clients_path, class: 'btn btn-secondary' %>
-    </div>
-  </div>
-</div>
+<table class= "table" id="client_table">
+  <thead>
+    <tr>
+      <th>Client Name</th>
+      <th>Hotels</th>
+      <th>Rooms</th>
+    </tr>
+  </thead>
+  <tbody id="client_table" >
+      <%= render 'client_show' %>
+  </tbody>
+</table>
