--- a/app/views/clients/_client_show.html.erb
+++ b/app/views/clients/_client_show.html.erb
@@ -40,25 +40,54 @@
         <% @client.hotel_branches.each do |hotel|%>
           <% if hotel.rooms.empty? %>
             <!-- Button trigger modal -->
-            <button type="button", class="btn btn-primary", data-bs-toggle="modal", data-bs-target="#addRoom">
+            <button type="button", class="btn btn-primary", data-bs-toggle="modal", data-bs-target="#addRoomModal">
               Add Room
             </button>
             <!-- Modal -->
-            <div class="modal fade" id="addRoom" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-              <div class="modal-dialog modal-dialog-centered" role="document">
+            <!-- Add Room Modal -->
+            <div class="modal fade" id="addRoomModal" tabindex="-1" role="dialog" aria-labelledby="addRoomModalLabel" aria-hidden="true">
+              <div class="modal-dialog" role="document">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLongTitle">Add Room</h5>
-                    <button type="button" id= "closeAddRoom" class="close" data-bs-dismiss="modal" aria-label="Close">
+                    <h5 class="modal-title" id="addRoomModalLabel">Add Room</h5>
+                    <button type="button" id="closeroomForm" class="close" data-bs-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
                   </div>
                   <div class="modal-body">
-                    <%= render 'rooms/newform' %>
+
+                    <%= form_tag add_rooms_client_path(@client), method: :patch, remote: true %>
+                      <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+                      <div class="form-group">
+                          <label for="hotel_branch_id">Select Hotel</label>
+                          <select class="form-control" id="hotel_branch_id" name="room[hotel_branch_id]">
+                              <% @client.hotel_branches.each do |hotel| %>
+                                  <option value="<%= hotel.id %>"><%= hotel.name %></option>
+                              <% end %>
+                          </select>
+                      </div>
+                      <div class="form-group">
+                          <label for="room_name">Name</label>
+                          <input type="text" class="form-control" id="room_name" name="room[name]">
+                      </div>
+                      <div class="form-group">
+                          <label for="room_capacity">Capacity</label>
+                          <input type="text" class="form-control" id="room_capacity" name="room[capacity]">
+                      </div>
+                      <div class="form-group">
+                          <label for="room_price">Price</label>
+                          <input type="text" class="form-control" id="room_price" name="room[price]">
+                      </div>
+                      <div class="form-group">
+                          <input type="submit" value="Add Room" class="btn btn-primary mt-2" />
+                      </div>
+
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
+            
           <% else %>
             <% hotel.rooms.each do |room| %>
               <li>
@@ -68,4 +97,4 @@
           <% end %>
         <% end %>
       </td>
-    </tr>
+</tr>
